@@ -99,7 +99,7 @@ public class J2SEButtonDefaultKeyCodes {
 		KeyInformation info = new KeyInformation();
 		info.keyCodes = new int[] { code };
 		codes.put(name, info);
-		backwardCompatibleNames.put(Integer.valueOf(code), name);
+		backwardCompatibleNames.put(new Integer(code), name);
 		return info;
 	}
 
@@ -107,11 +107,11 @@ public class J2SEButtonDefaultKeyCodes {
 		KeyInformation info = new KeyInformation();
 		info.keyCodes = new int[] { code1, code2 };
 		codes.put(name, info);
-		backwardCompatibleNames.put(Integer.valueOf(code1), name);
+		backwardCompatibleNames.put(new Integer(code1), name);
 		return info;
 	}
 
 	public static ButtonName getBackwardCompatibleName(int keyboardKey) {
-		return (ButtonName) backwardCompatibleNames.get(Integer.valueOf(keyboardKey));
+		return (ButtonName) backwardCompatibleNames.get(new Integer(keyboardKey));
 	}
 }
